methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:13: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:19: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:29: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:39: error: not found: value dogHouse
		dogHouse();		
                ^